--- a/frontend/LearnSass/index.html
+++ b/frontend/LearnSass/index.html
@@ -12,5 +12,10 @@
     <button class="btn btn-red">Button Red</button>
     <button class="btn btn-yellow">Button Yellow</button>
     <button class="btn btn-blue">Button Blue</button>
+
+    <h1>CASE 02</h1>
+    <button class="btn-red">Button Red</button>
+    <button class="btn-yellow">Button Yellow</button>
+    <button class="btn-blue">Button Blue</button>
 </body>
 </html>
